Avoid `Collections.unmodifiableSet()` indirection